# esp-claw

./: .gitlab-ci.yml  CUSTOM.md  README.md
.github/workflows/: build-firmware.yml
.gitlab/ci/: build-doc.yml  build.yml  deploy.yml  merge_bin.py
application/edge_agent/: partitions_16MB.csv  partitions_8MB.csv  sdkconfig.defaults
application/edge_agent/components/gen_bmgr_codes/: CMakeLists.txt  Kconfig.projbuild  board_manager.defaults  gen_board_device_config.c  gen_board_device_custom.h  gen_board_device_handles.c  gen_board_info.c  gen_board_metadata.yaml  gen_board_periph_config.c  gen_board_periph_handles.c  idf_component.yml
application/edge_agent/components/http_server/: CMakeLists.txt  http_server_core.c  http_server_priv.h  http_server_status_api.c  http_server_wifi_api.c
application/edge_agent/fatfs_image/: config.txt
application/edge_agent/fatfs_image/router_rules/: router_rules.json
application/edge_agent/main/: CMakeLists.txt  esp_wifi_stubs.c  idf_component.yml  main.c
components/claw_modules/cap_hid_keyboard/: CMakeLists.txt
components/claw_modules/cap_status_indicator/: CMakeLists.txt
components/claw_modules/claw_core/include/: claw_core.h
components/common/app_claw/: CMakeLists.txt  Kconfig  app_claw.c  app_lua_modules.c  idf_component.yml
components/common/wifi_manager/: wifi_manager.c
components/lua_modules/lua_module_thread/: CMakeLists.txt  README.md
components/lua_modules/lua_module_vision/: CMakeLists.txt  README.md  idf_component.yml
docs/: .gitignore
docs/src/flash-tool/: firmware.json  flash-page.ts  i18n.ts
(+37 files in other folders)
